Prints next 5 buses to arrive on a web page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
         <div class="col-md-12">
             <form id="messageForm" action="/busInfo" method="get">
                 <fieldset>
-                    <legend>Postcode: </legend>
-                    <input type="text" name="postcode">
+                    <legend>Atco Code: </legend>
+                    <input type="text" name="atcocode" value="490000077E">
                     <input type="submit" value="Get Bus Info" />
                 </fieldset>
             </form>
